--- a/.builds/elixir.yml
+++ b/.builds/elixir.yml
@@ -1,5 +1,6 @@
 image: ubuntu/lts
 packages:
+  - build-essential
   - zip
   - libgpgme-dev
   - autoconf
@@ -21,9 +22,10 @@ tasks:
   - install_asdf: |
       git clone https://github.com/asdf-vm/asdf.git ~/.asdf --branch v0.13.1
       source "$HOME/.asdf/asdf.sh"
-  - install_rust_and_compile_project: |
+  - install_rust: |
       curl https://sh.rustup.rs -sSf | bash -s -- -y
       source "$HOME/.cargo/env"
+  - install_elixir: |
       cd genex
       export KERL_CONFIGURE_OPTIONS="--disable-debug --without-javac"
       source "$HOME/.asdf/asdf.sh"
@@ -31,6 +33,10 @@ tasks:
       asdf plugin add erlang https://github.com/asdf-vm/asdf-erlang.git
       asdf plugin-add elixir https://github.com/asdf-vm/asdf-elixir.git
       asdf install
+  - compile_project: |
+      cd genex
+      source "$HOME/.asdf/asdf.sh"
+      source "$HOME/.cargo/env"
       mix local.hex --force
       mix local.rebar --force
       mix deps.get 
